# Nodepilot

./: CODEBUDDY.md  CONTEXT.md  README.md  RELEASE_NOTES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.codebuddy/plans/: auto-environment-setup_f4535d71.md  fix-log-window-capability_29f15f6a.md  fix-packaged-dev-server-start_be464e8e.md  fix-t-loading-webkit-tauri-rendering_2b6b27fd.md  tdesign-mobile-to-desktop-migration_0198794a.md
docs/: prd.md
docs/adr/: 0001-rust-owns-version-management.md  0002-popup-window-panel.md  0003-dynamic-tray-icon.md  0004-regular-desktop-window.md  0005-tdesign-desktop-migration.md  0006-git-branch-switching.md
scripts/: release.sh
src/: App.vue  components.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  commands.rs  env_setup.rs  error.rs  fs.rs  lib.rs  main.rs  tray.rs
src-tauri/src/version/: activator.rs  deleter.rs  error.rs  event.rs  fetcher.rs  installer.rs  manager.rs  mod.rs  tests.rs  types.rs
src/components/: CodeBlock.vue  LoadingSpinner.vue  ProjectRow.vue  VersionRow.vue
src/composables/: useTheme.ts  useVersionManager.ts
src/panels/: LogView.vue  SetupGuide.vue  VersionListPanel.vue
src/types/: index.ts
