[package]
name = "nodepilot"
version = "0.2.2"
description = "Node.js Version Manager GUI"
authors = ["finn"]
license = "MIT"
repository = "https://github.com/Theworld7/Nodepilot"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nodepilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
flate2 = "1"
tar = "0.4"
zip = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
plist = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
